[gd_scene load_steps=2 format=2]

[ext_resource path="res://DB.gd" type="Script" id=1]

[node name="DB" type="Node"]
script = ExtResource( 1 )

[node name="HTTPRequest" type="HTTPRequest" parent="."]

[node name="SendModifiedHTTPRequest" type="HTTPRequest" parent="."]

[node name="SendOriginalHTTPRequest" type="HTTPRequest" parent="."]

[connection signal="request_completed" from="HTTPRequest" to="." method="_on_request_completed"]
[connection signal="request_completed" from="SendModifiedHTTPRequest" to="." method="_on_SendHTTPRequest_request_completed"]
[connection signal="request_completed" from="SendOriginalHTTPRequest" to="." method="_on_SendOriginalHTTPRequest_request_completed"]
